# Rain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ReEngine  ReEngine-Release  ReEngine-release  setup_deps.sh
.github/workflows/: deploy-web.yml
Resources/: debug.wgsl  shader.wgsl  shader_default.wgsl  shader_ppfx.wgsl  shadow.wgsl
Resources/models/: SponzaExp5.gltf  bobo.gltf  ins.gltf  koko.gltf  putty.gltf  sphere.gltf
Resources/models/Helment/: untitled.gltf
Resources/shaders/: ComputeMipCube.wgsl  CubePreFilter.wgsl  CubePreFilter2.wgsl  debug.wgsl  default.wgsl  default_basic.wgsl  default_basic_batch.wgsl  pbr.wgsl  ppfx.wgsl  shadow_map.wgsl  shadow_map_batch.wgsl  skybox.wgsl
Resources/test/: untitled.gltf  untitled2.gltf
cmake/: ThirdParty.cmake  Utils.cmake
html/templates/: index.html
src/: Application.cpp  Application.h  Cam.h  Constants.h  EditorLayer.cpp  EditorLayer.h  Game.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  RuntimeLayer.cpp  RuntimeLayer.h  main.cpp
src/Math/: Math.cpp  Math.h
src/animation/: OzzAnimation.cpp  OzzAnimation.h  OzzAnimator.cpp  OzzAnimator.h  OzzConverter.cpp  OzzConverter.h  OzzSkeleton.cpp  OzzSkeleton.h  Skeleton.h
src/components/: RenderMeshSuper.cpp  RenderMeshSuper.h
src/core/: Assert.h  Base.h  Buffer.h  Input.h  KeyCode.h  Log.cpp  Log.h  MouseCode.h  Ref.h  SysInfo.cpp  SysInfo.h  Thread.cpp  Thread.h  UUID.cpp  UUID.h  Window.h
src/debug/: Profiler.cpp  Profiler.h
src/engine/: Actor.h  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLogSink.h  Layer.h  LayerStack.h
src/io/: cursor.cpp  cursor.h  filesystem.cpp  filesystem.h  input.h  keyboard.cpp  keyboard.h
src/physics/: PhysicTypes.h  PhysicUtils.cpp  PhysicUtils.h  Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsVehicle.cpp  PhysicsVehicle.h  PhysicsWheel.cpp  PhysicsWheel.h  RainTrackedVehicle.cpp  RainTrackedVehicle.h
src/platform/: CommandLine.cpp  CommandLine.h
src/platform/linux/: LinuxWindow.cpp  LinuxWindow.h
src/platform/osx/: OSXWindow.cpp  OSXWindow.h  macos_window.mm
src/platform/web/: WebWindow.cpp  WebWindow.h  web_window.h
src/render/: BindingManager.cpp  BindingManager.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandEncoder.h  ComputePass.h  Example.cpp  Example.h  Framebuffer.cpp  Framebuffer.h  GPUAllocator.cpp  GPUAllocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PipelineCompute.cpp  PipelineCompute.h  PipelineManager.cpp  PipelineManager.h  Render.cpp  Render.h  Render2D.cpp  Render2D.h  RenderContext.cpp  RenderContext.h  RenderMesh.cpp  RenderMesh.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h  RenderUtils.cpp  RenderUtils.h  (+19 more)
src/render/primitives/: RenderMeshUniform.h  mesh.h  texture.h
src/scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  scenerender.t
src/scene/components/: MMesh.h  MeshTexture.h  SolidMaterial.h  Transform.h
